test/spec_vectors/nop/fail/module_4.wat
(module (func $type-f64 (result f64) (nop)))